United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7096639 Tiered: Incorrect counter overflow handling for inlined methods
7096639 : Tiered: Incorrect counter overflow handling for inlined methods

Details
Type:
Bug
Submit Date:
2011-09-29
Status:
Closed
Updated Date:
2012-01-23
Project Name:
JDK
Resolved Date:
2012-01-23
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs20
Fixed Versions:
hs23

Related Reports
Backport:
Relates:

Sub Tasks

Description
Currently inlined methods at compile levels 2 and 3 never generate invocation events (only back branch events). This could lead to unhandled invocation counter overflows in case an inlinee is never called as a separate method.

                                    

Comments
EVALUATION

See main CR
                                     
2011-10-07
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/dc45ae774613
                                     
2011-09-30
SUGGESTED FIX

The fix is to call back into the runtime to report the inlinee invocation event but do so very infrequently, since we only need this to handle overflows rather than drive the policy.
                                     
2011-09-29



Hardware and Software, Engineered to Work Together