7096639: Tiered: Incorrect counter overflow handling for inlined methods

Enable invocation events for inlinees

Reviewed-by: kvn